src/style.css
span[data-time-format] {
    display: none;
}

body[data-time-format="12"] span[data-time-format="12"] {
    display: inline;
}

body[data-time-format="24"] span[data-time-format="24"] {
    display: inline;
}

.Select {
    padding: 0 2rem 0 0.5rem;
    width: auto;
    min-width: 7.5rem;
    border-radius: 4px;
    box-shadow: 0 0 0 1px #6f6e77;
}

.dark .Select {
    background-color: #2f2f2f;
    color: #fff;
    box-shadow: 0 0 0 1px #6f6e77;
}

html {
    --ce-text-primary: var(--text-primary, #0d0d0d);
    --ce-menu-primary: #ffffff;
    --ce-menu-secondary: var(--sidebar-surface-secondary, #ececec);
    --ce-border-light: #0d0d0d26;
}

.dark {
    --ce-text-primary: var(--text-primary, #ececec);
    --ce-menu-primary: #2A2A2A;
    --ce-menu-secondary: var(--sidebar-surface-secondary, #212121);
    --ce-border-light: var(--border-default, rgba(255, 255, 255, .15));
}

.dark .bg-menu {
    background-color: var(--ce-menu-primary);
}

.border-menu {
    border-color: var(--ce-border-light);
}

.menu-item {
    height: 46px;
}

.menu-item[disabled] {
    filter: brightness(0.5);
}

.ce-card {
    border-radius: 1rem;
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12), 0 2px 8px rgba(0, 0, 0, 0.08);
}

.dark .ce-card {
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4), 0 2px 8px rgba(0, 0, 0, 0.3);
}

.inputFieldSet {
    display: block;
    border-width: 2px;
    border-style: groove;
}

.inputFieldSet legend {
    margin-left: 4px;
}

.inputFieldSet input {
    background-color: transparent;
    box-shadow: none!important;
}

.row-half {
    grid-column: auto / span 1;
}

.row-full {
    grid-column: auto / span 2;
}

.dropdown-backdrop {
    display: block;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,.5);
    animation-name: pointerFadeIn;
    animation-duration: .3s;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes slideUp {
    from {
        transform: translateY(100%);
    }
    to {
        transform: translateY(0);
    }
}

@keyframes pointerFadeIn {
    from {
        opacity: 0;
        pointer-events: none;
    }
    to {
        opacity: 1;
        pointer-events: auto;
    }
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

@keyframes circularDash {
    0% {
        stroke-dasharray: 1px, 200px;
        stroke-dashoffset: 0;
    }
    50% {
        stroke-dasharray: 100px, 200px;
        stroke-dashoffset: -15px;
    }
    100% {
        stroke-dasharray: 100px, 200px;
        stroke-dashoffset: -125px;
    }
}

